# Zappy

./: .gitignore  CMakeLists.txt  clean.sh  make.sh  readme.md
.github/workflows/: zappy.yml
ai/: CMakeLists.txt  ai.py  communication.py  main.py
ai/State/: Dumb.py  Homer.py  Marge.py
ai/Tools/: SafeList.py  SafeVar.py
bonus/mc/: Dockerfile  clean_all_containers.sh  generate_image.sh  run_image.sh
bonus/mc/project/ZoatMC/: pom.xml
bonus/mc/project/ZoatMC/src/main/java/org/zoatmc/core/: ZoatPlugin.java
bonus/mc/project/ZoatMC/src/main/java/org/zoatmc/core/command/: ZoatCommand.java  ZoatFormatter.java
bonus/mc/project/ZoatMC/src/main/java/org/zoatmc/core/game/: ZGame.java
bonus/mc/project/ZoatMC/src/main/java/org/zoatmc/core/listener/: ControllerListener.java  EggListener.java  NPCListener.java  PlayerListener.java
bonus/mc/project/ZoatMC/src/main/java/org/zoatmc/http/: ResourceServer.java
bonus/mc/project/ZoatMC/src/main/resources/: plugin.yml
bonus/mc/project/ZoatMC/src/main/resources/pack/: pack.mcmeta
bonus/mc/project/ZoatMC/src/main/resources/text/: names.txt  words.txt
bonus/mc/template/: server.properties  spigot.yml
gui/: CMakeLists.txt  names.txt
gui/assets/: collect.glb  death.glb  idle.glb  pray.glb  pray_start_stop.glb  walk.glb
gui/include/: ChatBox.hpp  Egg.hpp  Firework.hpp  Game.hpp  GameModel.hpp  GameState.hpp  Human.hpp  Map.hpp  Point2d.hpp  RaylibWrapper.hpp  ResourcesTypes.hpp  Team.hpp  Tile.hpp
gui/include/window/: AWindow.hpp  GameMenu.hpp  GameWindows.hpp  PlayerInfoWindow.hpp  PlayerPopupWindow.hpp
gui/src/: ChatBox.cpp  Egg.cpp  Firework.cpp  Game.cpp  GameModel.cpp  GameState.cpp  Human.cpp  Main.cpp  Map.cpp  Point2d.cpp  RaylibWrapper.cpp  Team.cpp  Tile.cpp
gui/src/window/: GameMenu.cpp  GameWindows.cpp  PlayerInfoWindow.cpp  PlayerPopupWindow.cpp
lib/: CMakeLists.txt
lib/hexagon/: CMakeLists.txt  make.mk
lib/hexagon/include/hexagon/net/: csocket.h  csocket_block.h  csocket_linereader.h  socket.h  ssocket.h
lib/hexagon/include/hexagon/util/: c.h  fmt.h  fs.h  list.h  logger.h  loggerdefs.h  map.h  math.h  mem.h  process.h  signal.h  time.h
lib/hexagon/src/net/csocket/: base.c  flush.c  get.c  isalive.c  isasync.c  printf.c  read.c  skip.c  sync.c  write.c  writeln.c
lib/hexagon/src/net/csocket_block/: base.c  getbuff.c  getsize.c  mergeall.c  truncate.c
lib/hexagon/src/net/csocket_linereader/: base.c  clear.c  getbuffsize.c  read.c
lib/hexagon/src/net/socket/: context.c  getaddrstr.c  getipaddr.c  getport.c  getwordaddr.c
lib/hexagon/src/net/ssocket/: base.c  close.c  islistening.c  listen.c  shutdown.c  timeout.c
lib/hexagon/src/util/: signal.c  time.c
lib/hexagon/src/util/fmt/: length.c
lib/hexagon/src/util/fs/: combinepath.c  deletefile.c  exists.c  isdir.c  isfile.c  makedir.c  parentpath.c  realpath.c  stat.c
lib/hexagon/src/util/list/: append.c  at.c  atn.c  base.c  clear.c  find.c  findeq.c  foreach.c  foreachc.c  insert.c  len.c  node.c  pop.c  push.c  remove.c  sub.c
lib/hexagon/src/util/logger/: base.c  debug.c  err.c  fatal.c  fd.c  find.c  info.c  level.c  log.c  logv.c  threshold.c  trace.c  warn.c
lib/hexagon/src/util/map/: base.c  clear.c  foreach.c  foreachc.c  get.c  has.c  hash.c  len.c  put.c  remove.c  resize.c
lib/hexagon/src/util/mem/: alloc.c  find.c  free.c  lastbit.c  realloc.c
lib/hexagon/src/util/process/: check.c  current.c  getexitcode.c  getsignal.c  hasexited.c  hassignaled.c  ispaused.c  isrunning.c  parent.c  sendsignal.c  spawn.c
lib/imgui/: CMakeLists.txt
lib/raylib/: CMakeLists.txt
lib/rlimgui/: CMakeLists.txt
podman/: Containerfile  clean_all_containers.sh  generate_image.sh  run_image.sh  tag_name
podman/share/background/: branding.xcf
podman/share/defaults/.config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml  xfce4-panel.xml
podman/share/defaults/.local/share/applications/: cmake-gui.desktop  emacs.desktop  emacsclient.desktop  fluid.desktop  jconsole-java17-openjdk.desktop  jshell-java17-openjdk.desktop  xfce4-sensors.desktop
podman/tools/: coding-style
server/: CMakeLists.txt
server/include/: action.h  argument.h  client.h  game.h  math.h  player.h  server.h  server_handler.h  team.h  watcher.h  watcher_handler.h
server/src/: main.c
server/src/action/: base.c  incantation.c
server/src/action/impl/: broadcast.c  connect_nbr.c  eject.c  fork.c  incantation.c  inventory.c  left.c  look.c  move.c  right.c  set.c  take.c
server/src/argument/: argument.c  arguments.c  util.c
server/src/argument/impl/: clients.c  freq.c  height.c  help.c  logger.c  port.c  shitty_gui.c  sync_mode.c  teams.c  width.c
server/src/client/: base.c  player.c  watcher.c
server/src/game/: base.c  egg.c  generator.c  init.c  map.c  tick.c  util.c
server/src/player/: action.c  base.c  get.c  kill.c  tick.c
server/src/server/: base.c  broadcast.c  get.c  run.c
server/src/server/handler/: on_connect.c  on_disconnect.c  on_postprocess.c  on_preprocess.c  when_readable.c  when_writable.c
server/src/team/: base.c  find.c
server/src/watcher/: base.c  handle_statement.c  handlers.c  util.c
server/src/watcher/impl/: get_map_contents.c  get_player_inventory.c  get_player_level.c  get_player_position.c  get_team_names.c  get_tile_contents.c  get_time_unit.c  map_size.c  set_time_unit.c
(+100 files in other folders)
